// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UninstallModal component should be rendered correctly if app not uninstallable 1`] = `
<div
  className="sto-myapps-modal--uninstall"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    title="Uninstall this application"
    withCross={true}
  >
    <ModalContent>
      <div
        className="sto-myapps-modal-content"
      >
        <Unknown
          source="This application is a major part of the Cozy platform. In order to keep you a __minimum user experience quality__, it's not possible to uninstall it through the Store application."
        />
        <div
          className="sto-myapps-modal-controls"
        >
          <button
            className="coz-btn coz-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            Cancel
          </button>
          <button
            className="coz-btn coz-btn--danger coz-btn--delete"
            disabled={true}
            onClick={[Function]}
            role="button"
          >
            Uninstall
          </button>
        </div>
      </div>
    </ModalContent>
  </Modal>
</div>
`;

exports[`UninstallModal component should be rendered correctly if app uninstallable 1`] = `
<div
  className="sto-myapps-modal--uninstall"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    title="Uninstall this application"
    withCross={true}
  >
    <ModalContent>
      <div
        className="sto-myapps-modal-content"
      >
        <Unknown
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <div
          className="sto-myapps-modal-controls"
        >
          <button
            className="coz-btn coz-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            Cancel
          </button>
          <button
            className="coz-btn coz-btn--danger coz-btn--delete"
            disabled={false}
            onClick={[Function]}
            role="button"
          >
            Uninstall
          </button>
        </div>
      </div>
    </ModalContent>
  </Modal>
</div>
`;

exports[`UninstallModal component should hanlde correctly error in state 1`] = `
<div
  className="sto-myapps-modal--uninstall"
>
  <Modal
    overflowHidden={false}
    primaryType="secondary"
    secondaryAction={[Function]}
    secondaryType="regular"
    title="Uninstall this application"
    withCross={true}
  >
    <ModalContent>
      <div
        className="sto-myapps-modal-content"
      >
        <Unknown
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <p
          class="coz-error"
        >
          Something went wrong when uninstalling this application. Reason: This is a test error
        </p>
        <div
          className="sto-myapps-modal-controls"
        >
          <button
            className="coz-btn coz-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            Cancel
          </button>
          <button
            className="coz-btn coz-btn--danger coz-btn--delete"
            disabled={false}
            onClick={[Function]}
            role="button"
          >
            Uninstall
          </button>
        </div>
      </div>
    </ModalContent>
  </Modal>
</div>
`;
